uses pokemon class, paint pokemon types and add see more btn

--- a/index.html
+++ b/index.html
@@ -32,9 +32,14 @@
       <ol id="pokemonList" class="pokemons">
         
       </ol>
+      
+      <div class="pagination">
+        <button id="loadMoreBtn" type="button">See more</button>
+      </div>
     </section>
 
     <script src="/assets/js/poke-api.js"></script>
+    <script src="/assets/js/pokemon-model.js"></script>
     <script src="/assets/js/main.js"></script>
   </body>
 </html>
